# src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router } from 'express';
-import { categoriesRoutes } from './categories.routes.js';
-import { specificationsRoutes } from './specification.routes.js';
+import { categoriesRouter } from './categories.routes.js';
+import { specificationsRouter } from './specification.routes.js';
+import { usersRouter } from './users.routes.js';
 
 const router = Router();
 
-router.use('/categories', categoriesRoutes);
-router.use('/specifications', specificationsRoutes);
+router.use('/categories', categoriesRouter);
+router.use('/specifications', specificationsRouter);
+router.use('/users', usersRouter);
 
 export { router };
